fix alignment of buttons

--- a/app/assets/stylesheets/components/btn.css.less
+++ b/app/assets/stylesheets/components/btn.css.less
@@ -156,6 +156,24 @@
   line-height: 36px;
   padding-right: 20px;
   text-transform: uppercase;
+  white-space: nowrap;
+
+  &.right{
+    padding-right: 0;
+    padding-left: 20px;
+    
+    .icon {
+      padding-left: 12px;
+      padding-right: 0;
+      padding-top: 4px;
+    }
+
+    @media (max-width: 480px) {
+      .icon {
+        padding-left: 0;
+      }
+    }
+  }
 
   .icon {
     padding-right: 12px;
@@ -171,33 +189,6 @@
 
     .icon {
       padding-right: 0;
-    }
-  }
-}
-
-.btn-fab-extended-right {
-  display: flex;
-  height: 42px;
-  border-radius: 24px;
-  font-size: 14px;
-  line-height: 36px;
-  padding-left: 20px;
-  text-transform: uppercase;
-
-  .icon {
-    padding-left: 12px;
-    padding-top: 4px;
-  }
-
-  @media (max-width: 480px) {
-    padding-left: 8px;
-    padding-right: 8px;
-    .text {
-      display: none;
-    }
-
-    .icon {
-      padding-left: 0;
     }
   }
 }
