--- a/app/assets/stylesheets/models/activities.css.less
+++ b/app/assets/stylesheets/models/activities.css.less
@@ -84,21 +84,21 @@
 }
 
 .content-page-actions {
-  display: flex;
   padding-bottom: 16px;
+  text-align: center;
 
-  .content-page-action {
-    display: flex;
-    flex: 1;
-    justify-content: center;
+  .btn-fab-extended {
+    display: inline-flex;
+  }
 
-    :first-child {
-      margin-right: auto;
-    }
+  .previous {
+    position: absolute;
+    left: 10px;
+  }
 
-    :last-child {
-      margin-left: auto;
-    }
+  .next {
+    position: absolute;
+    right: 10px;
   }
 }
 
